--- a/W3SavegameEditor/MainWindow.xaml
+++ b/W3SavegameEditor/MainWindow.xaml
@@ -1,10 +1,12 @@
-﻿<controls:MetroWindow 
-        x:Class="W3SavegameEditor.MainWindow"
+﻿<controls:MetroWindow
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:models="clr-namespace:W3SavegameEditor.Models"
     xmlns:viewModels="clr-namespace:W3SavegameEditor.ViewModels"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" 
+        x:Class="W3SavegameEditor.MainWindow"
     Title="W3SavegameEditor"
         Height="520"
         Width="800">
@@ -25,13 +27,13 @@
             <ColumnDefinition Width="240*"/>
         </Grid.ColumnDefinitions>
         <Button Content="Refresh" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Command="{Binding InitializeSavegames, Mode=OneWay}" />
-        <DataGrid Name="SavegameGrid" HorizontalAlignment="Left" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" Height="408" Width="285" Margin="10,10,0,0" ItemsSource="{Binding Savegames}" AutoGenerateColumns="False" SelectionMode="Single" SelectedItem="{Binding SelectedSavegame}">
+        <DataGrid x:Name="SavegameGrid" HorizontalAlignment="Left" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" Height="408" Width="285" Margin="10,10,0,0" ItemsSource="{Binding Savegames}" AutoGenerateColumns="False" SelectionMode="Single" SelectedItem="{Binding SelectedSavegame}">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Name}" ClipboardContentBinding="{x:Null}" Header="Name" CanUserResize="False" IsReadOnly="True"/>
             </DataGrid.Columns>
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
-                    <i:InvokeCommandAction Command="{Binding OpenSavegame}" CommandParameter="{Binding ElementName=SavegameGrid, Path=SelectedItem}" />
+                    <i:InvokeCommandAction Command="{Binding OpenSavegame}" CommandParameter="{Binding SelectedItem, ElementName=SavegameGrid}" />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </DataGrid>
@@ -51,7 +53,21 @@
                     <TextBox  HorizontalAlignment="Left" Height="23" Margin="72,103,0,0" TextWrapping="Wrap" Text="{Binding Data.Variables.Count, Mode=OneWay}" VerticalAlignment="Top" Width="120" />
                 </Grid>
             </TabItem>
-            <TabItem Header="Variables">
+            <TabItem Header="Variables Tree">
+                <Grid>
+                    <TreeView HorizontalAlignment="Left" Height="398" Margin="0,10,0,0" VerticalAlignment="Top" Width="457" ItemsSource="{Binding Data.Variables}"
+						VirtualizingPanel.IsVirtualizing = "True"
+						VirtualizingPanel.VirtualizationMode = "Recycling"
+						VirtualizingPanel.ScrollUnit="Pixel">
+                        <TreeView.Resources>
+                            <HierarchicalDataTemplate DataType="{x:Type models:VariableModel}" ItemsSource="{Binding Children}">
+                                <TextBlock Text="{Binding Name}"/>
+                            </HierarchicalDataTemplate>
+                        </TreeView.Resources>
+                    </TreeView>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Variables Grid">
                 <Grid>
                     <DataGrid HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="398" Width="447" ItemsSource="{Binding Data.Variables}" AutoGenerateColumns="False" >
                         <DataGrid.Columns>
