Implemented referencing the root variables

--- a/W3SavegameEditor/MainWindow.xaml
+++ b/W3SavegameEditor/MainWindow.xaml
@@ -84,7 +84,7 @@
                         </DataGrid.Columns>
                         <DataGrid.RowDetailsTemplate>
                             <DataTemplate>
-                                <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding Children}" >
+                                <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding Children}"  EnableRowVirtualization="True" VirtualizingStackPanel.VirtualizationMode="Recycling">
                                     <DataGrid.Columns>
                                         <DataGridTextColumn Binding="{Binding Index, Mode=OneWay}"  Header="Index"/>
                                         <DataGridTextColumn Binding="{Binding Name, Mode=OneWay}"  Header="Name"/>
